integration_tests/codegen_fail/fail/object/attr_wrong_item.stderr
error: #[graphql_object] attribute is applicable to non-trait `impl` blocks only
 --> $DIR/attr_wrong_item.rs:3:1
  |
3 | #[graphql_object]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
